[project]
name = "rero-mef"
version = "0.16.2"
description = "Invenio digital library framework MEF."
authors = [{name = "RERO",email = "<software@rero.ch>"}]
license = "GNU Affero General Public License v3.0"
requires-python = ">= 3.9,<3.13"

## Python packages dependencies (order matters)
#------------------------------------------------------------------------------
## Note: poetry evaluates the package constraints from the top to the bottom
## and respects only the last constraint to install the package.
## Thus the most strength constraint should be at the end.
## Imagine the following package list for the foo package with the
## most recent version equal to 5.0:
## A foo Pipfile example:
## ----------------------
## foo = ">1.0" # first will install 5.0
## foo = "==1.0" # then will downgrade to 1.0
## foo = ">3.0" # finally will upgrade to 5.0
## when the python code will be executed a conflict exception will be raised.
#------------------------------------------------------------------------------

dependencies = [
    ## Third party inven## Third party invenio modules used by RERO EBOOKS
    "uwsgi (>=2.0)",
    "uwsgi-tools (>=1.1.1)",
    "uwsgitop (>=0.11)",

    "invenio-oaiharvester @ git+https://github.com/inveniosoftware/invenio-oaiharvester.git@v1.0.0a4",
    "invenio-search [elasticsearch7] (>=3.0.0,<4.0.0)",

    # Invenio core modules
    "invenio-app (>=2.0.0,<3.0.0)",
    "invenio-base (>=2.0.0,<3.0.0)",
    "invenio-cache (>=2.0.0,<3.0.0)",
    "invenio-celery (>=2.0.0,<3.0.0)",
    "invenio-config (>=1.0.3,<2.0.0)",
    "invenio-i18n (>=3.0.0,<4.0.0)",
    "invenio-db [postgresql] (>=2.0.0,<3.0.0)",
    # Invenio base bundle
    "invenio-assets (>=4.0.0,<5.0.0)",
    "invenio-formatter (>=3.0.0,<4.0.0)",
    "invenio-logging [sentry] (>=4.0.0,<5.0.0)",
    "invenio-mail (>=2.0.0,<3.0.0)",
    "invenio-rest (>=2.0.0,<3.0.0)",
    "invenio-theme (>=4.0.0,<5.0.0)",
    # Invenio auth bundle
    "invenio-access (>=4.0.0,<6.0.0)",
    "invenio-accounts (>=6.0.0,<7.0.0)",
    "invenio-oauth2server (>=3.0.0,<4.0.0)",
    "invenio-oauthclient (>=5.0.0,<6.0.0)",
    "invenio-userprofiles (>=4.0.0,<5.0.0)",
    # Invenio metadata bundle
    "invenio-indexer (>=3.0.0,<4.0.0)",
    "invenio-jsonschemas (>=2.0.0,<3.0.0)",
    "invenio-oaiserver (>=3.0.0,<4.0.0)",
    "invenio-pidstore (>=2.0.0,<3.0.0)",
    "invenio-records-rest (>=3.0.0,<4.0.0)",
    "invenio-records-ui (>=1.2.0,<2.0.0)",
    "invenio-records (>=3.0.0,<4.0.0)",
    #invenio-search-ui (>=4.0.0,<5.0.0)",
    "python-dotenv (>=0.13.0)",

    ## MEF specific python modules
    "PyYAML (>=5.3.1)",
    "ijson (>=2.5.1)",
    "poethepoet",
    # problem with marcxml `leader`
    "pymarc (<5.2.0)",

    "sqlitedict (==2.1.0)",
    "sentry-sdk",
    "rero-invenio-base (>=0.3.1)",
    "setuptools"
]

[tool.poetry.group.dev.dependencies]
## Python packages development dependencies (order matters)
#----------------------------------------------------------
## Default from Invenio
pytest-invenio = ">=3.0.0,<4.0.0"
pydocstyle = ">=6.1.1"
pytest-black = ">=0.4.0"
pytest-black-ng = ">=0.4.0"
Sphinx = ">=4.5.0"
## RERO ILS specific python packages
pip-audit = ">=2.8.0,<3.0.0"
mock = ">=2.0.0"
autoflake = ">=1.3.1"
appnope = { version = "*", optional = true }

[project.entry-points."app.console_scripts"]
rero-ils = "invenio_app.cli:cli"

[project.entry-points."invenio_celery.tasks"]
rero_mef = "rero_mef.tasks"
agents = "rero_mef.agents.tasks"
concepts = "rero_mef.concepts.tasks"
places = "rero_mef.places.tasks"


[project.entry-points."invenio_assets.webpack"]
rero_mef_css = "rero_mef.theme.webpack:theme"

[project.entry-points."invenio_base.apps"]
rero-mef = "rero_mef.ext:REROMEFAPP"

[project.entry-points."invenio_base.blueprints"]
rero_mef = "rero_mef.theme.views:blueprint"

[project.entry-points."invenio_config.module"]
rero_mef = "rero_mef.config"

[project.entry-points."invenio_db.alembic"]
rero_mef = "rero_mef:alembic"

[project.entry-points."invenio_db.models"]
mef = "rero_mef.agents.mef.models"
viaf = "rero_mef.agents.viaf.models"
agents_gnd = "rero_mef.agents.gnd.models"
agents_idref = "rero_mef.agents.idref.models"
agents_rero = "rero_mef.agents.rero.models"
concepts_mef = "rero_mef.concepts.mef.models"
concepts_rero = "rero_mef.concepts.rero.models"
concepts_idref = "rero_mef.concepts.idref.models"
concepts_gnd = "rero_mef.concepts.gnd.models"
places_mef = "rero_mef.places.mef.models"
placets_idref = "rero_mef.places.idref.models"
placets_gnd = "rero_mef.places.gnd.models"

[project.entry-points."invenio_pidstore.minters"]
mef_id = "rero_mef.agents.mef.minters:mef_id_minter"
viaf_id = "rero_mef.agents.viaf.minters:viaf_id_minter"
agent_gnd_id = "rero_mef.agents.gnd.minters:gnd_id_minter"
agent_idref_id = "rero_mef.agents.idref.minters:idref_id_minter"
agent_rero_id = "rero_mef.agents.rero.minters:rero_id_minter"
concept_mef_id = "rero_mef.concepts.mef.minters:mef_id_minter"
concept_rero_id = "rero_mef.concepts.rero.minters:rero_id_minter"
concept_idref_id = "rero_mef.concepts.idref.minters:idref_id_minter"
concept_gnd_id = "rero_mef.concepts.gnd.minters:gnd_id_minter"
place_mef_id = "rero_mef.places.mef.minters:mef_id_minter"
place_idref_id = "rero_mef.places.idref.minters:idref_id_minter"
place_gnd_id = "rero_mef.places.gnd.minters:gnd_id_minter"

[project.entry-points."invenio_pidstore.fetchers"]
mef_id = "rero_mef.agents.mef.fetchers:mef_id_fetcher"
viaf_id = "rero_mef.agents.viaf.fetchers:viaf_id_fetcher"
agent_gnd_id = "rero_mef.agents.gnd.fetchers:gnd_id_fetcher"
agent_idref_id = "rero_mef.agents.idref.fetchers:idref_id_fetcher"
agent_rero_id = "rero_mef.agents.rero.fetchers:rero_id_fetcher"
concept_mef_id = "rero_mef.concepts.mef.fetchers:mef_id_fetcher"
concept_rero_id = "rero_mef.concepts.rero.fetchers:rero_id_fetcher"
concept_idref_id = "rero_mef.concepts.idref.fetchers:idref_id_fetcher"
concept_gnd_id = "rero_mef.concepts.gnd.fetchers:gnd_id_fetcher"
place_mef_id = "rero_mef.places.mef.fetchers:mef_id_fetcher"
place_idref_id = "rero_mef.places.idref.fetchers:idref_id_fetcher"
place_gnd_id = "rero_mef.places.gnd.fetchers:gnd_id_fetcher"

[project.entry-points."invenio_jsonschemas.schemas"]
common = "rero_mef.jsonschemas"
mef = "rero_mef.agents.mef.jsonschemas"
viaf = "rero_mef.agents.viaf.jsonschemas"
agents_gnd = "rero_mef.agents.gnd.jsonschemas"
agents_idref = "rero_mef.agents.idref.jsonschemas"
agents_rero = "rero_mef.agents.rero.jsonschemas"
cocepts_mef = "rero_mef.concepts.mef.jsonschemas"
cocepts_rero = "rero_mef.concepts.rero.jsonschemas"
cocepts_idref = "rero_mef.concepts.idref.jsonschemas"
cocepts_gnd = "rero_mef.concepts.gnd.jsonschemas"
places_mef = "rero_mef.places.mef.jsonschemas"
places_idref = "rero_mef.places.idref.jsonschemas"
places_gnd = "rero_mef.places.gnd.jsonschemas"

[project.entry-points."invenio_search.mappings"]
mef = "rero_mef.agents.mef.mappings"
viaf = "rero_mef.agents.viaf.mappings"
agents_gnd = "rero_mef.agents.gnd.mappings"
agents_idref = "rero_mef.agents.idref.mappings"
agents_rero = "rero_mef.agents.rero.mappings"
concepts_mef = "rero_mef.concepts.mef.mappings"
concepts_rero = "rero_mef.concepts.rero.mappings"
concepts_idref = "rero_mef.concepts.idref.mappings"
concepts_gnd = "rero_mef.concepts.gnd.mappings"
places_mef = "rero_mef.places.mef.mappings"
places_idref = "rero_mef.places.idref.mappings"
places_gnd = "rero_mef.places.gnd.mappings"

[project.entry-points."invenio_records.jsonresolver"]
mef = "rero_mef.agents.mef.jsonresolvers.mef_resolver"
viaf = "rero_mef.agents.viaf.jsonresolvers.viaf_resolver"
agents_gnd = "rero_mef.agents.gnd.jsonresolvers.gnd_resolver"
agents_idref = "rero_mef.agents.idref.jsonresolvers.idref_resolver"
agents_rero = "rero_mef.agents.rero.jsonresolvers.rero_resolver"
concepts_mef = "rero_mef.concepts.mef.jsonresolvers.mef_resolver"
concepts_rero = "rero_mef.concepts.rero.jsonresolvers.rero_resolver"
concepts_idref = "rero_mef.concepts.idref.jsonresolvers.idref_resolver"
concepts_gnd = "rero_mef.concepts.gnd.jsonresolvers.gnd_resolver"
places_mef = "rero_mef.places.mef.jsonresolvers.mef_resolver"
places_idref = "rero_mef.places.idref.jsonresolvers.idref_resolver"
places_gnd = "rero_mef.places.gnd.jsonresolvers.gnd_resolver"

[project.entry-points."invenio_base.api_blueprints"]
api_rero_mef = "rero_mef.theme.views:api_blueprint"
api_monitoring = "rero_mef.monitoring.views:api_blueprint"
api_blueprint = "rero_mef.views:api_blueprint"

[project.entry-points."flask.commands"]
fixtures = "rero_mef.cli:fixtures"
utils = "rero_mef.cli:utils"
celery = "rero_mef.cli:celery"
agents = "rero_mef.agents.cli:agents"
monitoring = "rero_mef.monitoring.cli:monitoring"

[project.entry-points."dojson.cli.rule"]

[project.entry-points."dojson.cli.dump"]
pjson = "rero_mef.dojson.utils:dump"

[tool.poe.tasks]
bootstrap = {cmd = "./scripts/bootstrap", help = "Runs bootstrap"}
console = {cmd = "./scripts/console", help = "Opens invenio shell"}
server = {cmd = "./scripts/server", help = "Starts the server "}
setup = {cmd = "./scripts/setup", help = "Runs setup"}
update = {cmd = "./scripts/update", help = "Runs update"}
run_tests = {cmd = "./scripts/test", help = "Runs all tests"}
tests = {cmd = "pytest", help = "pytest"}
tests_debug = {cmd = "pytest -s -vv --no-cov", help = "pytest -s -vv --no-cov"}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=2.0", "setuptools"]
